--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.0",
+		"dotenv": "^8.2.0",
 		"ejs": "^3.1.5",
 		"express": "^4.15.2",
-		"cors": "^2.8.0"
+		"mangodb": "^1.0.0",
+		"mongoose": "^5.12.2",
+		"nanoid": "^3.1.22"
 	},
 	"devDependencies": {
 		"got": "^11.3.0",
