--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"body-parser": "^1.19.0",
 		"cors": "^2.8.0",
+		"dateformat": "^4.5.1",
 		"dotenv": "^8.2.0",
 		"ejs": "^3.1.5",
 		"express": "^4.15.2",
