--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"express": "^4.15.2",
 		"mangodb": "^1.0.0",
 		"mongoose": "^5.12.2",
+		"multer": "^1.4.2",
 		"nanoid": "^3.1.22"
 	},
 	"devDependencies": {
