Made Randome Quote Machine and some other changes

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGO_URI="mongodb+srv://ebashirli:sWtcdDoft151a2Ai@fcccluster.yb66d.mongodb.net/learn?retryWrites=true&w=majority"
+MONGO_URI="mongodb+srv://elvin:36JkOOYLXyIbm4LD@cluster0.7vptg.mongodb.net/users?retryWrites=true&w=majority"
+# PORT=
+# NODE_ENV=test
